@@ -2,7 +2,10 @@ package com.murar.journel.service;
 
 import com.murar.journel.entity.User;
 import com.murar.journel.repository.UserEntryRepository;
+import lombok.extern.slf4j.Slf4j;
 import org.bson.types.ObjectId;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Component;
@@ -11,6 +14,7 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
+@Slf4j
 @Component
 public class UserEntryService {
     @Autowired
@@ -20,15 +24,19 @@ public class UserEntryService {
     private PasswordEncoder passwordEncoder;
 
 
-
     public void saveEntry(User user){
         userEntryRepository.save(user);
     }
 
     public void saveNewEntry(User user){
-        user.setPassword(passwordEncoder.encode(user.getPassword()));
-        user.setRoles(Arrays.asList("USER"));
-        userEntryRepository.save(user);
+        try {
+            user.setPassword(passwordEncoder.encode(user.getPassword()));
+            user.setRoles(List.of("USER"));
+            userEntryRepository.save(user);
+        } catch (Exception e) {
+            log.error(  "User cant be created");
+            throw new RuntimeException(e);
+        }
     }
 
 
